--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,43 @@
 alembic==1.14.0
+APScheduler==3.11.0
 bidict==0.23.1
 blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.1.0
+Flask-APScheduler==1.13.1
 Flask-Cors==5.0.0
 Flask-JSGlue==0.3.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
+Flask-Scheduler==0.0.51
 Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 h11==0.14.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.8
 MarkupSafe==3.0.2
 psycopg2-binary==2.9.9
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-engineio==4.10.1
 python-socketio==5.11.4
 pytz==2024.2
 PyYAML==6.0.2
+requests==2.32.3
 setuptools==70.3.0
 simple-websocket==1.1.0
+six==1.17.0
 SQLAlchemy==2.0.29
 sqlalchemy-serializer==1.4.22
 typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+urllib3==2.3.0
 Werkzeug==3.1.3
 wsproto==1.2.0
