--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ Flask-Migrate==4.0.7
 Flask-Scheduler==0.0.51
 Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
+gevent==24.11.1
+gevent-websocket==0.10.1
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
@@ -41,3 +43,5 @@ tzlocal==5.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.2
