--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 alembic==1.14.0
+anyio==4.8.0
 APScheduler==3.11.0
+attrs==24.3.0
+azure-core==1.32.0
+azure-identity==1.19.0
 bidict==0.23.1
 blinker==1.9.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+cryptography==44.0.0
+Deprecated==1.2.15
 Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Cors==5.0.0
@@ -15,33 +25,60 @@ Flask-Migrate==4.0.7
 Flask-Scheduler==0.0.51
 Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
+frozenlist==1.5.0
 gevent==24.11.1
 gevent-websocket==0.10.1
 greenlet==3.1.1
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==6.0.1
 idna==3.10
+importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.8
 MarkupSafe==3.0.2
+microsoft-kiota-abstractions==1.6.8
+microsoft-kiota-authentication-azure==1.6.8
+microsoft-kiota-http==1.6.8
+msal==1.31.1
+msal-extensions==1.2.0
+msgraph-core==0.1.2
+multidict==6.1.0
+opentelemetry-api==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+portalocker==2.10.1
+propcache==0.2.1
 psycopg2-binary==2.9.9
+pycparser==2.22
+PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-engineio==4.10.1
 python-socketio==5.11.4
 pytz==2024.2
+pywin32==308
 PyYAML==6.0.2
 requests==2.32.3
 setuptools==70.3.0
 simple-websocket==1.1.0
 six==1.17.0
+sniffio==1.3.1
 SQLAlchemy==2.0.29
 sqlalchemy-serializer==1.4.22
+std-uritemplate==2.0.1
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
 urllib3==2.3.0
 Werkzeug==3.1.3
+wrapt==1.17.0
 wsproto==1.2.0
+yarl==1.18.3
+zipp==3.21.0
 zope.event==5.0
 zope.interface==7.2
