--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ python-dateutil==2.9.0.post0
 python-engineio==4.10.1
 python-socketio==5.11.4
 pytz==2024.2
-pywin32==308
+pywin32==308; platform_system=="Windows"
 PyYAML==6.0.2
 requests==2.32.3
 setuptools==70.3.0
