--- a/requirements.txt
+++ b/requirements.txt
@@ -37,8 +37,10 @@ httpx==0.28.1
 hyperframe==6.0.1
 idna==3.10
 importlib_metadata==8.5.0
+isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lxml==5.3.0
 Mako==1.3.8
 MarkupSafe==3.0.2
 microsoft-kiota-abstractions==1.6.8
@@ -51,6 +53,7 @@ multidict==6.1.0
 opentelemetry-api==1.29.0
 opentelemetry-sdk==1.29.0
 opentelemetry-semantic-conventions==0.50b0
+platformdirs==4.3.6
 portalocker==2.10.1
 propcache==0.2.1
 psycopg2-binary==2.9.9
@@ -64,6 +67,8 @@ pytz==2024.2
 pywin32==308; platform_system=="Windows"
 PyYAML==6.0.2
 requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
 setuptools==70.3.0
 simple-websocket==1.1.0
 six==1.17.0
@@ -79,6 +84,7 @@ Werkzeug==3.1.3
 wrapt==1.17.0
 wsproto==1.2.0
 yarl==1.18.3
+zeep==4.3.1
 zipp==3.21.0
 zope.event==5.0
 zope.interface==7.2
