--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ python-socketio==5.11.4
 pytz==2024.2
 pywin32==308; platform_system=="Windows"
 PyYAML==6.0.2
+RapidFuzz==3.12.1
 requests==2.32.3
 requests-file==2.1.0
 requests-toolbelt==1.0.0
@@ -76,6 +77,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.29
 sqlalchemy-serializer==1.4.22
 std-uritemplate==2.0.1
+thefuzz==0.22.1
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
