--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ multidict==6.1.0
 opentelemetry-api==1.29.0
 opentelemetry-sdk==1.29.0
 opentelemetry-semantic-conventions==0.50b0
+pillow==11.1.0
 platformdirs==4.3.6
 portalocker==2.10.1
 propcache==0.2.1
@@ -66,6 +67,7 @@ python-socketio==5.11.4
 pytz==2024.2
 pywin32==308; platform_system=="Windows"
 PyYAML==6.0.2
+qrcode==8.0
 RapidFuzz==3.12.1
 requests==2.32.3
 requests-file==2.1.0
