--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ platformdirs==4.3.6
 portalocker==2.10.1
 propcache==0.2.1
 psycopg2-binary==2.9.9
+pyaml==25.7.0
 pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
@@ -87,7 +88,10 @@ thefuzz==0.22.1
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
 urllib3==2.3.0
+user-agents==2.2.0
 Werkzeug==3.1.3
 wonderwords==2.2.0
 wrapt==1.17.0
